# purple-horse-system

./: CMakeLists.txt  Makefile  README.md  link.ld  system.kdev4
debug/: gdb.script  start.script
include/: desctables.h  memory.h  misc.h  port.h  terminal.hxx  types.h
source/: CMakeLists.txt  boot.S  defines.S  desctables.S  desctables.cxx  desctables.hxx  main.c  main.cxx  mboot.hxx  memory.S  misc.h  port.S  screen.S  system.hxx
source/codegen/: instructions.hxx
source/common/: defines.S  memory.S  misc.h
source/hardware/: boot.S  mboot.hxx  port.S  port.h  types.hxx
source/interrupts/: handling.cxx  handling.hxx  helpers.S  irq.cxx  irq.hxx  table.hxx
source/memory/: helpers.S  init.cxx  init.hxx  kmalloc.cxx  kmalloc.hxx  table.hxx
source/multitask/: basic.cxx  basic.hxx  helpers.S
source/terminal/: console.cxx  console.hxx  serial.cxx  serial.hxx  terminal.cxx  terminal.hxx  types.hxx
